Migrated to Kotlin

--- a/app/src/main/res/layout/activity_full_screen_gallery.xml
+++ b/app/src/main/res/layout/activity_full_screen_gallery.xml
@@ -4,7 +4,7 @@
     android:background="@color/cardview_dark_background">
 
     <com.hiteshsahu.awesome_gallery.view.widget.ExtendedViewPager
-        android:id="@+id/view_pager"
+        android:id="@+id/mViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -12,48 +12,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
-        android:background="#70000000"
+        android:background="@color/opaque"
         android:orientation="horizontal"
-        android:weightSum="5">
+        android:weightSum="3">
 
-        <ImageView
-            android:id="@+id/canvas"
-            android:layout_width="50dp"
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/editImage"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:focusable="false"
             android:gravity="center"
             android:paddingLeft="5dp"
-            android:src="@android:drawable/ic_menu_edit"
+            android:src="@drawable/vector_edit"
             android:textColor="@color/white"
             android:textSize="25sp" />
 
-
-        <ImageView
-            android:id="@+id/share"
-            android:layout_width="50dp"
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/shareImage"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:focusable="false"
             android:gravity="center"
             android:paddingLeft="5dp"
-            android:src="@android:drawable/ic_menu_share"
-            android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:src="@drawable/vector_share" />
 
-        <ImageView
-            android:id="@+id/delete"
-            android:layout_width="50dp"
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/deleteImage"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:focusable="false"
             android:gravity="center"
             android:paddingLeft="5dp"
-            android:src="@android:drawable/ic_menu_delete"
-            android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:src="@drawable/vector_delete" />
     </LinearLayout>
 </FrameLayout>
