--- a/app/src/main/res/layout/list_item_media_gallery.xml
+++ b/app/src/main/res/layout/list_item_media_gallery.xml
@@ -2,14 +2,14 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/list_container"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="1dp"
-    android:layout_marginBottom="2dp"
     android:layout_marginLeft="2dp"
-    android:layout_marginRight="2dp"
     android:layout_marginTop="2dp"
+    android:layout_marginRight="2dp"
+    android:layout_marginBottom="2dp"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
     card_view:cardBackgroundColor="@android:color/white"
@@ -18,12 +18,12 @@
     card_view:cardUseCompatPadding="true">
 
     <FrameLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/list_container_bg"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
@@ -68,12 +68,12 @@
                 android:freezesText="true"
                 android:gravity="left"
                 android:marqueeRepeatLimit="marquee_forever"
-                android:maxLines="1"
                 android:scrollHorizontally="true"
                 android:shadowColor="#000000"
                 android:shadowDx="1.5"
                 android:shadowDy="1.3"
                 android:shadowRadius="1.6"
+                android:singleLine="true"
                 android:textColor="@android:color/white"
                 android:textSize="13sp"
                 android:transitionName="list_item_desc" />
@@ -91,16 +91,16 @@
             android:focusableInTouchMode="true"
             android:freezesText="true"
             android:marqueeRepeatLimit="marquee_forever"
-            android:maxLines="1"
             android:minHeight="200dp"
-            android:paddingBottom="5dp"
             android:paddingLeft="10dp"
-            android:paddingRight="10dp"
             android:paddingTop="5dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="5dp"
             android:scrollHorizontally="true"
             android:shadowColor="@color/colorAccent"
             android:shadowDx="1"
             android:shadowDy="1"
+            android:singleLine="true"
             android:text="&#8942;"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp"
