--- a/app/src/main/res/layout/content_gallery.xml
+++ b/app/src/main/res/layout/content_gallery.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.hiteshsahu.awesome_gallery.view.GalleryActivity"
+    tools:context="com.hiteshsahu.awesome_gallery.view.FullScreenGalleryActivity"
     tools:showIn="@layout/activity_gallery">
 
     <include
@@ -20,7 +20,7 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/image_grid"
+            android:id="@+id/imageGrid"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true" />
