--- a/app/src/main/res/layout/view_no_media.xml
+++ b/app/src/main/res/layout/view_no_media.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/no_media_found"
+    android:id="@+id/noMedia"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
+    android:background="@color/white"
     android:orientation="vertical">
 
 
@@ -12,7 +13,7 @@
         android:id="@+id/no_media_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/no_media" />
 
     <TextView
         android:layout_width="wrap_content"
