--- a/app/src/main/res/layout/list_item_media_gallery.xml
+++ b/app/src/main/res/layout/list_item_media_gallery.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -30,7 +31,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/product_image"
+                android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
@@ -42,21 +43,23 @@
                 android:id="@+id/mediaName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/product_image"
+                android:layout_below="@+id/image"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="5dp"
                 android:gravity="center"
                 android:shadowColor="#000000"
                 android:shadowDx="1.5"
+                android:ellipsize="marquee"
                 android:shadowDy="1.3"
                 android:shadowRadius="1.6"
                 android:textColor="@android:color/white"
                 android:textSize="15sp"
                 android:textStyle="bold"
-                android:transitionName="list_item_title" />
+                android:transitionName="list_item_title"
+                android:singleLine="true" />
 
             <TextView
-                android:id="@+id/product_desc"
+                android:id="@+id/media_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/mediaName"
@@ -67,6 +70,7 @@
                 android:focusableInTouchMode="true"
                 android:freezesText="true"
                 android:gravity="left"
+                android:maxLines="1"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
                 android:shadowColor="#000000"
@@ -76,7 +80,8 @@
                 android:singleLine="true"
                 android:textColor="@android:color/white"
                 android:textSize="13sp"
-                android:transitionName="list_item_desc" />
+                android:transitionName="list_item_desc"
+                tools:ignore="EllipsizeMaxLines" />
 
 
         </LinearLayout>
@@ -108,4 +113,4 @@
 
 
     </FrameLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
